--- a/aboutus.html
+++ b/aboutus.html
@@ -16,6 +16,24 @@
 
 <body>
 
+            <nav class="navbar navbar-dark navbar-expand-sm  fixed-top">
+                <div class="container">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <a class="navbar-brand mr-auto" href="./index.html"> Usama Resturent</a>
+                    <div class="navbar-collapse collapse" id="navbar">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item "><a class="nav-link" href="./index.html">Home</a></li>
+                            <li class="nav-item active"><a class="nav-link" href="#">About</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -31,6 +49,12 @@
     </header>
 
     <div class="container-fluid">
+        <div class="row">
+            <ol class="col-12 breadcrumb">
+                <li class="breadcrumb-item active"><a href="./index.html">Home</a></li>
+                <li class="breadcrumb-item"><a >About Us</a></li>
+            </ol>
+        </div>
         <div class="container-fluid">
             <div>
                 <h3>About Us</h3>
@@ -102,7 +126,7 @@
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
