--- a/contactus.html
+++ b/contactus.html
@@ -92,7 +92,62 @@
               <h3>Send us your Feedback</h3>
            </div>
             <div class="col-12 col-md-9">
-                Form goes here
+               <form action="">
+                   <div class="form-group row">
+                 <label for="firstname" class="col-md-2 col-form-label">First Name</label> 
+                <div class="col-md-10">
+                  <input type="text" class="form-control" id="firstname" name="firstname" placeholder="First Name" value="">
+                  </div>
+                   </div>
+                  <div class="form-group row">
+                <label for="firstname" class="col-md-2 col-form-label">Last Name</label>
+                  <div class="col-md-10">
+                  <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Last Name" value="">
+                  </div>
+                   </div>
+                   <div class="form-group row">
+                  <label for="telnum" class=" col-12 col-md-2 col-form-label">Contact Tel.</label>
+              <div class=" col-5 col-md-3">
+            <input type="tel" class="form-control" id="areeacode" name="areacode" placeholder="Area Code" value="">
+             </div>
+           <div class=" col-7 col-md-7">
+               <input type="tel" class="form-control" id="telnum" name="telnum" placeholder="Tel Number" value="">
+              </div>
+              </div>
+                <div class="form-group row">
+                <label for="emailid" class="col-md-2 col-form-label">Email</label>
+                <div class="col-md-10">
+              <input type="email" class="form-control" id="email" name="email" placeholder="Email" value="">
+              </div>
+                </div>
+              <div class="form-group row">
+                  <div class="col-md-6 offset-md-2">
+                      <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="approve" name="approve" value="">
+                            <label class="form-check-label" for="approve">
+                                <strong>May we Contact you</strong>
+                   </label>
+                  </div>
+                </div>
+                <div class="col-md-3 offset-md-1">
+                    <select class="form-control" name="contacttype" id="contacttype">
+                        <option selected>Tel.</option>
+                        <option>Email</option>
+                    </select>
+                </div>
+                </div>
+                 <div class="form-group row">
+            <label for="feedback" class="col-md-2 col-form-label">Your feedback</label>
+             <div class="col-md-10">
+                <textarea  class="form-control" id="feedback" name="feedback" placeholder="Feedback" value="" rows="12"></textarea>
+                  </div>
+                  </div>
+                    <div class=" form-group row">
+                        <div class=" col-md-10 offset-md-2">
+                            <button type="submit" class="btn btn-primary">Seend Feedback</button>
+                        </div>
+                    </div>
+               </form>
             </div>
              <div class="col-12 col-md">
             </div>
