--- a/aboutus.html
+++ b/aboutus.html
@@ -23,7 +23,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand mr-auto" href="./index.html"> Usama restaurant</a>
+                    <a class="navbar-brand mr-auto" href="./index.html"><img src="images/logo.png" height="30" width="41" alt="logo"></a>
                     <div class="navbar-collapse collapse" id="navbar">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item "><a class="nav-link" href="./index.html"><span class="fa fa-lg fa-home"></span> Home</a></li>
@@ -44,7 +44,8 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm">
+                <div class="col-12 col-sm align-self-center">
+                    <img src="images/logo.png" class="img-fluid" alt="logo">
                 </div>
             </div>
         </div>
@@ -64,8 +65,8 @@
             </div>
         </div>
 
-        <div class="container-fluid my-5">
-            <div class="container-fluid py-5">
+        <div class="row row-content">
+            <div class="col-sm-6">
                 <h2 class="">Our History</h2>
                 <p class="row col-6 text-align-center d-none d-sm-block col-sm-6">Started in 2010, Ristorante con Fusion
                     quickly established
@@ -81,9 +82,34 @@
                         Pan, a </em> chain started by
                     our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
             </div>
-            <div>
+            <div class="col-sm">
+                <div class="card">
+                    <h3 class="card-header bg-primary text-white">Facts At a Glance</h3>
+                    <div class="card-body">
+                        <dl class="row">
+                            <dt class="col-6">Started</dt>
+                            <dd class="col-6">3 Feb. 2013</dd>
+                            <dt class="col-6">Major Stake Holder</dt>
+                            <dd class="col-6">HK Fine Foods Inc.</dd>
+                            <dt class="col-6">Last Year's Turnover</dt>
+                            <dd class="col-6">$1,250,375</dd>
+                            <dt class="col-6">Employees</dt>
+                            <dd class="col-6">40</dd>
+                        </dl>
+                </div>
             </div>
         </div>
+        <div class="col-12">
+            <div class="card card-body bg-light">
+                <blockquote class="blockquote">
+                    <p class="mb-0">You better cut the pizza in four because I'm not hungry enough to eat six</p>
+                    <footer class="blockquote-footer">Yogi Berra,
+                        <cite title="Source Title">The Wit and Wisdom of Yogi Berra,
+                            P. Pepe, Diversion Books, 2014</cite>
+                </blockquote>
+            </div>
+        </div>
+    </div>
 
 
         <div class="container-fluid ">
@@ -118,6 +144,50 @@
                     experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a
                         winning hit! Amma Mia!</em></p>
             </div>
+        </div>
+        <div class="ror row-content">
+            <div class="col-12 col-sm-9">
+                <h2>Facts &amp; Figures</h2>
+                <div class="table-responsive">
+                <table class="table table-striped">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>&nbsp;</th>
+                        <th>2013</th>
+                        <th>2014</th>
+                        <th>2015</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">Employees</th>
+                        <td>15</td>
+                        <td>30</td>
+                        <td>60</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Guests Served</th>
+                        <td>1500</td>
+                        <td>45000</td>
+                        <td>100,000</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Special Events</th>
+                        <td>3</td>
+                        <td>5</td>
+                        <td>10</td>
+                    </tr>
+                    <tr>
+                        <th>Annual Turnover</th>
+                        <td>$251,325</td>
+                        <td>$1,250,375</td>
+                        <td>$5,625,000</td>
+                    </tr>
+                </table>
+                </div>
+            </div>
+            <div class="col-12 col-sm-3">
+                <h3>Facts</h3>
         </div>
 
     </div>
