--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mr-auto" href="#"> Usama restaurant</a>
+            <a class="navbar-brand mr-auto" href="#"> <img src="images/logo.png" height="30" width="41" alt="logo"></a>
             <div class="navbar-collapse collapse" id="navbar">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-lg fa-home"></span> Home</a></li>
@@ -54,8 +54,15 @@
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
-                <h2>Uthappizza</h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                     src="images/uthappizza.png" alt="uthappizza">
+                     <div class="media-body">
+<h2 class="mt-0">Uthappizza</h2>
+<p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry
+    tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+                     </div>
+                </div>
             </div>
         </div>
 
@@ -75,9 +82,17 @@
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div class="col col-sm order-sm-first col-md">
-                <h2>Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                     src="images/alberto.png" alt="alberto">
+                     <div class="media-body">
+                  <h2 class="mt-0">Alberto Somayya</h2>
+              <h4>Executive Chef</h4>
+            <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the
+           culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                         </div>
+                </div>
+ 
             </div>
         </div>
     </div>
