--- a/index.html
+++ b/index.html
@@ -35,9 +35,47 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span
                                 class="fa fa-lg fa-card"></span> Contact</a></li>
                 </ul>
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal" >
+                        <span class="fa fa-lg fa-user"></span> Login
+                    </a>
+                </span>
             </div>
         </div>
     </nav>
+
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="email">Email:</label>
+                            <input type="email" class="form-control" id="email" placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label for="pwd">Password:</label>
+                            <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+                        </div>
+                        <div class="form-group form-check">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox"> Remember me
+                            </label>
+                        </div>
+                        <button type="button" class="btn btn-secondary btn-sm ml-auto" data-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary btn-sm ml-1">Submit</button>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </div>
 
     <header class="jumbotron row-header">
         <div class="container">
@@ -51,7 +89,11 @@
                     <img src="images/logo.png" class="img-fluid" alt="logo">
                 </div>
                 <div class="col-xs-12 col-sm-2 align-self-center">
-                    <button class="btn btn-warning btn-block" ><a href="#reservetable">Reserve Table</a></button>
+                    <a class="btn btn-warning btn-block" 
+                    data-toggle="tooltip" data-html="true"
+                    title="Or Call us at <br><strong>+92 3489635046</strong>"
+                     data-placement="bottom"
+                     href="#reservetable">Reserve Table</a>
                 </div>
 
             </div>
@@ -240,6 +282,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function () {
+           $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 </body>
 
 </html>
