--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-    <link rel="stylesheet" href="/css/styles-old.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <title>Ristorante Con Fusion</title>
 </head>
@@ -358,33 +358,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-        <script>
-            $(document).ready(function () {
-                $('[data-toggle="tooltip"]').tooltip();
-                $("#mycarousel").carousel({ interval: 1000 });
-
-                            $("#carouselButton").click(function () {
-                    if ($("#carouselButton").children("span").hasClass('fa-pause')) {
-                        $("#mycarousel").carousel('pause');
-                        $("#carouselButton").children("span").removeClass('fa-pause');
-                        $("#carouselButton").children("span").addClass('fa-play');
-                    }
-                    else if ($("#carouselButton").children("span").hasClass('fa-play')) {
-                        $("#mycarousel").carousel('cycle');
-                        $("#carouselButton").children("span").removeClass('fa-play');
-                        $("#carouselButton").children("span").addClass('fa-pause');
-                    }
-                });
-                    $("#loginButton").click(function () {
-                    $("#loginModal").modal('show');
-                });
-
-                $("#reserveButton").click(function () {
-                    $("#reserveModal").modal('show');
-                });
-            });
-        </script>
+   <script src="js/scripts.js"></script>
 </body>
 
 </html>
