--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
     <!-- Bootstrap CSS -->
+    <!-- build:css css/main.css--> 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link rel="stylesheet" href="/css/styles.css">
+    <!-- endbuild -->
 
     <title>Ristorante Con Fusion</title>
 </head>
@@ -237,9 +239,9 @@
                             <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                                 <span class="carousel-control-next-icon"></span>
                             </a>
-                                                <button class="btn btn-danger btn-sm" id="carouselButton">
-                                                    <span id="carousel-button-icon" class="fa fa-pause"></span>
-                                                </button>
+                             <button class="btn btn-danger btn-sm" id="carouselButton">
+                             <span id="carousel-button-icon" class="fa fa-pause"></span>
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -355,10 +357,12 @@
     </footer>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+    <!-- build:js js/main.js-->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
    <script src="js/scripts.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
