--- a/aboutus.html
+++ b/aboutus.html
@@ -26,7 +26,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mr-auto" href="./index.html"><img src="images/logo.png" height="30" width="41"
+            <a class="navbar-brand mr-auto" href="./index.html"><img src="img/logo.png" height="30" width="41"
                     alt="logo"></a>
             <div class="navbar-collapse collapse" id="navbar">
                 <ul class="navbar-nav mr-auto">
@@ -53,7 +53,7 @@
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <img src="images/logo.png" class="img-fluid" alt="logo">
+                    <img src="img/logo.png" class="img-fluid" alt="logo">
                 </div>
             </div>
         </div>
@@ -333,7 +333,7 @@
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
         <script src="js/scripts.js"></script>
-        <!-- endbuild -->
+         <!-- endbuild -->
 </body>
 
 </html>
