--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mr-auto" href="#"> <img src="images/logo.png" height="30" width="41" alt="logo"></a>
+            <a class="navbar-brand mr-auto" href="#"> <img src="img/logo.png" height="30" width="41" alt="logo"></a>
             <div class="navbar-collapse collapse" id="navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-lg fa-home"></span>
@@ -174,7 +174,7 @@
             </div>
             <div class="col-xs-12 col-md-2">
                 <p style="padding:20px;"></p>
-                <img src="images/logo.png" class="img-responsive  center-block">
+                <img src="img/logo.png" class="img-responsive  center-block">
             </div>
             <div class="col-xs-12 col-md-2" style="margin-top: 100px;">
                 <!--a type="button" class="btn btn-warning btn-block"
@@ -189,10 +189,10 @@
     <div class="container">
                 <div class="row-content">
                     <div class="col">
-                        <div class="carousel" id="mycarousel" data-ride="carousel">
+                        <div class="carousel slide" id="mycarousel" data-ride="carousel">
                             <div class="corousel-inner" role="listbox">
                                 <div class="carousel-item active">
-                                    <img class="d-block img-fluid" src="images/uthappizza.png" alt="First slide">
+                                    <img class="d-block img-fluid" src="img/uthappizza.png" alt="First slide">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span
                                                 class="badge badge-pill badge-secondary">$4.99</span></h2>
@@ -203,7 +203,7 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="images/buffet.png" alt="First slide">
+                                    <img class="d-block img-fluid" src="img/buffet.png" alt="First slide">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h2>Weekend Grand Buffet <spna class="badge badge-danger">NEW</spna>
                                         </h2>
@@ -216,7 +216,7 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block img-fluid" src="images/alberto.png" alt="First slide">
+                                    <img class="d-block img-fluid" src="img/alberto.png" alt="First slide">
                                     <div class="carousel-caption d-none d-md-block">
                                         <h2>Alberto Somayya</h2>
                                         <h4>Executive Chef</h4>
@@ -239,9 +239,9 @@
                             <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                                 <span class="carousel-control-next-icon"></span>
                             </a>
-                             <button class="btn btn-danger btn-sm" id="carouselButton">
-                             <span id="carousel-button-icon" class="fa fa-pause"></span>
-                            </button>
+                                <button class="btn btn-danger btn-sm" id="carousel-button">
+                                    <span id="carousel-button-icon" class="fa fa-pause"></span>
+                                </button>
                         </div>
                     </div>
                 </div>
@@ -251,7 +251,7 @@
             </div>
             <div class="col col-sm order-sm-first col-md">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/uthappizza.png"
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png"
                         alt="uthappizza">
                     <div class="media-body">
                         <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span
@@ -279,7 +279,7 @@
                             entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99
                             per person </p>
                     </div>
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/buffet.png" alt="buffet">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="buffet">
 
 
                 </div>
@@ -291,7 +291,7 @@
                 </div>
                 <div class="col col-sm order-sm-first col-md">
                     <div class="media">
-                        <img class="d-flex mr-3 img-thumbnail align-self-center" src="images/alberto.png" alt="alberto">
+                        <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="alberto">
                         <div class="media-body">
                             <h2 class="mt-0">Alberto Somayya</h2>
                             <h4>Executive Chef</h4>
@@ -366,3 +366,5 @@
 </body>
 
 </html>
+
+  
